--- a/index.html
+++ b/index.html
@@ -7,10 +7,14 @@
     <title>Simulador</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="shortcut icon" href="./assets/conciencia-de-si-mismo.png" type="image/x-icon">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" 
+    rel="stylesheet" 
+    integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" 
+    crossorigin="anonymous">
 </head>
 <body>
     <h1>Mi juego</h1>
-  <img id="imagen" src="imagen.jpg">
+  <img id="imagen" src="./assets/room.jpg" class="img-fluid">
   <select id="selectEstado">
     <option value="neutral">Neutral</option>
     <option value="feliz">Feliz</option>
@@ -22,7 +26,8 @@
   <br>
   <button id="botonFrases">Activar frases</button>
   
-  <audio id="audio" src="musica.mp3"></audio>
+  <audio id="audio" src="./assets/pajaros-a-la-manana.mp3"></audio>
   <script src="./scripts.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 </body>
 </html>
