--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <h1>Mi juego</h1>
-  <img id="imagen" src="./assets/room.jpg" class="img-fluid">
+  <img id="imagen" src="./assets/room.jpg" class="img-fluid" data-estado="neutral">
   <select id="selectEstado">
     <option value="neutral">Neutral</option>
     <option value="feliz">Feliz</option>
