--- a/index.html
+++ b/index.html
@@ -1,33 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Simulador</title>
-    <link rel="stylesheet" href="styles.css">
-    <link rel="shortcut icon" href="./assets/conciencia-de-si-mismo.png" type="image/x-icon">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" 
-    rel="stylesheet" 
-    integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" 
-    crossorigin="anonymous">
-</head>
-<body>
-    <h1>Mi juego</h1>
-  <img id="imagen" src="./assets/room.jpg" class="img-fluid" data-estado="neutral">
-  <select id="selectEstado">
-    <option value="neutral">Neutral</option>
-    <option value="feliz">Feliz</option>
-    <option value="triste">Triste</option>
-    <option value="enojado">Enojado</option>
-  </select>
-  <br>
-  <button id="botonMusica">Activar música</button>
-  <br>
-  <button id="botonFrases">Activar frases</button>
-  
-  <audio id="audio" src="./assets/pajaros-a-la-manana.mp3"></audio>
-  <script src="./scripts.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
-</body>
+    <link rel="stylesheet" href="styles.css" />
+    <link
+      rel="shortcut icon"
+      href="./assets/conciencia-de-si-mismo.png"
+      type="image/x-icon"
+    />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
+      crossorigin="anonymous"
+    />
+  </head>
+  <body>
+    <div class="container-fluid">
+      <h1 class="text-center">Mi juego</h1>
+      <img
+        id="imagen"
+        src="./assets/room.jpg"
+        class="img-fluid"
+        data-estado="neutral"
+      />
+      <div class="d-flex justify-content-center p-3">
+        <select id="selectEstado" class="btn btn-secondary m-1">
+            <option value="neutral">Neutral</option>
+            <option value="feliz">Feliz</option>
+            <option value="triste">Triste</option>
+            <option value="enojado">Enojado</option>
+          </select>
+          <br />
+          <button id="botonMusica" class="btn btn-warning m-1">sonido</button>
+          <br />
+          <button id="botonFrases" class="btn btn-primary m-1">Activar frases</button>
+    
+          <audio id="audio" src="./assets/pajaros-a-la-manana.mp3"></audio>
+      </div>
+    </div>
+
+    <script src="./scripts.js"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
