--- a/index.html
+++ b/index.html
@@ -18,17 +18,21 @@
       crossorigin="anonymous"
     />
   </head>
+  
   <body>
     <div class="container-fluid">
-      <h1 class="text-center">Mi juego</h1>
-      <img
-        id="imagen"
-        src="./assets/room.jpg"
-        class="img-fluid"
-        data-estado="neutral"
-      />
-      <div class="d-flex justify-content-center p-3">
-        <select id="selectEstado" class="btn btn-secondary m-1">
+        <h1 class="text-center">Mi juego</h1>
+        <div class="position-relative">
+          <img
+            id="imagen"
+            src="./assets/room.jpg"
+            class="img-fluid"
+            data-estado="neutral"
+          />
+          <div id="frase" class="position-absolute top-50 start-50 translate-middle text-white fs-2"></div>
+        </div>
+        <div class="d-flex justify-content-center p-3">
+          <select id="selectEstado" class="btn btn-secondary m-1">
             <option value="neutral">Neutral</option>
             <option value="feliz">Feliz</option>
             <option value="triste">Triste</option>
@@ -37,12 +41,12 @@
           <br />
           <button id="botonMusica" class="btn btn-warning m-1">sonido</button>
           <br />
-          <button id="botonFrases" class="btn btn-primary m-1">Activar frases</button>
-    
+          <!--<button id="botonFrases" class="btn btn-primary m-1">Activar frases</button>-->
+      
           <audio id="audio" src="./assets/pajaros-a-la-manana.mp3"></audio>
+        </div>
       </div>
-    </div>
-
+   
     <script src="./scripts.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
