--- a/index.html
+++ b/index.html
@@ -21,12 +21,11 @@
   
   <body>
     <div class="container-fluid">
-        <h1 class="text-center">Mi juego</h1>
+        <h1 class="text-center">Simulador</h1>
         <div class="position-relative">
           <img
             id="imagen"
             src="./assets/room.jpg"
-            class="img-fluid"
             data-estado="neutral"
           />
           <div id="frase" class="position-absolute top-50 start-50 translate-middle text-white fs-2"></div>
