--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
             id="imagen"
             src="./assets/room.jpg"
             data-estado="neutral"
+            data-nivel="sueño"
           />
           <p>Vista</p>
           <div id="frase" class="position-absolute top-50 start-50 translate-middle text-white fs-2"></div>
@@ -34,13 +35,13 @@
         <div class="d-flex justify-content-center p-3">
           <div class="m-2">
             <p>Otros Sentidos</p>
-            <button id="botonMusica" class="btn btn-dark m-1">oído</button>
+            <button id="botonMusica" class="btn btn-secondary m-1">oído</button>
             <audio id="audio" src="./assets/pajaros-a-la-manana.mp3"></audio>
-            <button id="botonGusto" class="btn btn-dark m-1">gusto</button>
-            <button id="botonOlfato" class="btn btn-dark m-1">olfato</button>
-            <button id="botonTacto" class="btn btn-dark m-1">tacto</button>
-            <button id="botonCenestesia" class="btn btn-dark m-1">cenestesia</button>
-            <button id="botonKinestesia" class="btn btn-dark m-1">kinestesia</button>
+            <button id="botonGusto" class="btn btn-secondary m-1">gusto</button>
+            <button id="botonOlfato" class="btn btn-secondary m-1">olfato</button>
+            <button id="botonTacto" class="btn btn-secondary m-1">tacto</button>
+            <button id="botonCenestesia" class="btn btn-secondary m-1">cenestesia</button>
+            <button id="botonKinestesia" class="btn btn-secondary m-1">kinestesia</button>
           </div>
           <!--<button id="botonFrases" class="btn btn-primary m-1">Activar frases</button>-->
           <div class="m-2">
