--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
           />
           <p>Vista</p>
           <div id="frase" class="position-absolute top-50 start-50 translate-middle text-white fs-2"></div>
+          <div id="frase2" class="position-absolute top-30 start-30 translate-middle text-white fs-2"></div>
+          <div id="frase3" class="position-absolute top-80 start-80 translate-middle text-white fs-2"></div>
         </div>
         <div class="d-flex justify-content-center p-3">
           <div class="m-2">
