--- a/index.html
+++ b/index.html
@@ -37,32 +37,33 @@
             <div id="frase" class="position-absolute top-50 start-50 translate-middle text-white fs-2"></div>
             <div id="frase2" class="position-absolute top-30 start-30 translate-middle text-white fs-2"></div>
             <div id="frase3" class="position-absolute top-80 start-80 translate-middle text-white fs-2"></div>
+            <div class="d-flex justify-content-center p-3">
+              <div class="m-2">
+                <audio id="audio" src="./assets/pajaros-a-la-manana.mp3"></audio>
+              </div>
+              <!--<button id="botonFrases" class="btn btn-primary m-1">Activar frases</button>-->
+              <div class="m-2">
+                <p>Climas</p>
+                <select id="selectEstado" class="btn btn-warning">
+                  <option value="neutral">Neutral</option>
+                  <option value="feliz">Feliz</option>
+                  <option value="triste">Triste</option>
+                  <option value="enojado">Enojado</option>
+                </select>
+              </div>
+              <div class="m-2">
+                <p>Niveles de Conciencia</p>
+                <select id="selectNivel" class="btn btn-info">
+                  <option value="sueño">Sueño</option>
+                  <option value="semisueño">Semisueño</option>
+                  <option value="vigilia">Vigilia</option>
+                  <option value="conc-de-si">Conciencia de si</option>
+                  <option value="conc-objetiva">Conciencia Objetiva</option>
+                </select>
+              </div>
+            </div>
           </div>
-          <div class="d-flex justify-content-center p-3 mt-5">
-            <div class="m-2">
-              <audio id="audio" src="./assets/pajaros-a-la-manana.mp3"></audio>
-            </div>
-            <!--<button id="botonFrases" class="btn btn-primary m-1">Activar frases</button>-->
-            <div class="m-2">
-              <p>Climas</p>
-              <select id="selectEstado" class="btn btn-warning">
-                <option value="neutral">Neutral</option>
-                <option value="feliz">Feliz</option>
-                <option value="triste">Triste</option>
-                <option value="enojado">Enojado</option>
-              </select>
-            </div>
-            <div class="m-2">
-              <p>Niveles de Conciencia</p>
-              <select id="selectNivel" class="btn btn-info">
-                <option value="sueño">Sueño</option>
-                <option value="semisueño">Semisueño</option>
-                <option value="vigilia">Vigilia</option>
-                <option value="conc-de-si">Conciencia de si</option>
-                <option value="conc-objetiva">Conciencia Objetiva</option>
-              </select>
-            </div>
-          </div>
+          
         
       </div>
    
