--- a/index.html
+++ b/index.html
@@ -29,14 +29,15 @@
               data-estado="neutral"
               data-nivel="sueño"
             />
-            <p id="sentidos">Vista &#128070 | Oído: Canto de pájaros | Gusto: El sabor de mi lengua | 
-              Olfato: Aroma a madera y lavanda | Tacto: Mi pijama suave | Cenestesia: 
-              Pequeño dolor de espalda | Kinestesia: Posición erguida
-            </p>
-            <button id="botonMusica" class="btn btn-light m-1">&#127925</button>
             <div id="frase" class="position-absolute top-50 start-50 translate-middle text-white fs-2"></div>
             <div id="frase2" class="position-absolute top-30 start-30 translate-middle text-white fs-2"></div>
             <div id="frase3" class="position-absolute top-80 start-80 translate-middle text-white fs-2"></div>
+            <p id="sentidos">Vista &#128070 | Oído: Canto de pájaros | Gusto: El sabor de mi lengua | 
+              Olfato: Aroma a madera y lavanda | Tacto: Mi pijama suave | Cenestesia: 
+              Leve dolor de espalda | Kinestesia: Posición erguida
+            </p>
+            <button id="botonMusica" class="btn btn-light m-1">&#127925</button>
+
             <div class="d-flex justify-content-center p-3">
               <div class="m-2">
                 <audio id="audio" src="./assets/pajaros-a-la-manana.mp3"></audio>
