--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
               src="./assets/room.jpg"
               data-estado="neutral"
               data-nivel="sueño"
+              alt="room"
             />
             <div id="frase" class="position-absolute top-50 start-50 translate-middle text-white fs-2"></div>
             <div id="frase2" class="position-absolute top-30 start-30 translate-middle text-white fs-2"></div>
@@ -37,6 +38,7 @@
               Leve dolor de espalda | Kinestesia: Posición erguida
             </p>
             <button id="botonMusica" class="btn btn-light m-1">&#127925</button>
+            <audio src="./assets/pajaros-a-la-manana.mp3" id="audio"></audio>
               <select id="selectEstado" class="btn btn-warning m-1">
                 <optgroup label="Climas:">
                 <option value="neutral">Neutral</option>
@@ -58,7 +60,7 @@
       </div>
    
 
-      
+
     <script src="./scripts.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
