emoji y vigilia seleccionado

--- a/index.html
+++ b/index.html
@@ -33,10 +33,7 @@
             <div id="frase" class="position-absolute top-50 start-50 translate-middle text-white fs-2"></div>
             <div id="frase2" class="position-absolute top-30 start-30 translate-middle text-white fs-2"></div>
             <div id="frase3" class="position-absolute top-80 start-80 translate-middle text-white fs-2"></div>
-            <p id="sentidos">Vista &#128070 | Oído: Canto de pájaros | Gusto: El sabor de mi lengua | 
-              Olfato: Aroma a madera y lavanda | Tacto: Mi pijama suave | Cenestesia: 
-              Leve dolor de espalda | Kinestesia: Posición erguida
-            </p>
+            <p id="sentidos">Vista: &#128070	- Oído: Canto de pájaros - Gusto: Sabor de mi lengua - Olfato: Aroma a madera y lavanda - Tacto: Suavidad de mi pijama de seda - Cenestesia: Sensación saludable y con energía - Kinestesia: Posición erguida, levemente encorvada</p>
             <button id="botonMusica" class="btn btn-light m-1">&#127925</button>
             <audio src="./assets/pajaros-a-la-manana.mp3" id="audio"></audio>
               <select id="selectEstado" class="btn btn-warning m-1">
@@ -51,7 +48,7 @@
                 <optgroup label="Niveles de Conciencia">
                 <option value="sueño">Sueño</option>
                 <option value="semisueño">Semisueño</option>
-                <option value="vigilia">Vigilia</option>
+                <option value="vigilia" selected>Vigilia</option>
                 <option value="conc-de-si">Conciencia de si</option>
                 <option value="conc-objetiva">Conciencia Objetiva</option>
                 </optgroup>   
